src/main/java/antlr/test/fail/duplicate_function.go
package main

func main() {

}
func foo() {
    var tst = 12
}
func foo2() {
    var tst = 12
    tst = 5
}
func doo() {
    var ab = 12
}
func foo2() {

}